FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
more details.

You should have received a copy of the GNU General Public License along
with this program; if not, write to the Free Software Foundation, Inc.,
59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
------------------------------------------------------------------------------------
CHANGELOG file
v1.120709
	Enh.		Added ability to write to scratch. CURRENT_SCRATCH is now available (slash terminated)
v1.120627
	Enh.		Added gt(),lt(),gte(),lte() to arithmetic.
v1.120624
	Bug.		value IKO now responds correctly when using xpath attribute.
	Enh.		added 'for' attribute to itype. currently unimplemented.
v1.120620
	Enh.		arithmetic if() now returns false on NaN and Zero.
v1.120525
	Enh.		Added several more encoders, hmac instruction operation.
	Bug			fixed an output memleak. fixed an output.error interleave.
v1.120503
	Enh.		Added log2() to arithmetic. Added unique to instruction. (returns a sorted list of unique chars)
v1.120322
	Enh.		Modified temporary filenames (when no ssh available) to help prevent fileclash.
v1.120312
	Enh.		New Encoder 'secret' uses config variable 'salt'.
v1.120229
	BUG.		Rare crash to do with pnsr deletion order during a fragment append.
v1.120220        
	FIX.		XQilla 2.3 needs to have internal 'xs' schema namespace identified
v1.120214        
	CHG.		Unnecessary comparates are no longer evaluated.
	BUG. 		message allows for other xml grammars in m:body.
v1.120130
	Enh.		FCGI. Both xhtml1 and html5 can be served - but not together. Errors may throw a wobbler. OBYX_USING_XHTML5 must be set.
v1.120118
	Enh.		precision="bool" returns 'true/false' where false=0. Also arithmetic reads 'true' as 1, 'false' as 0
v1.120101       <----- From this version on, comparisons default to break='true' at the first logical opportunity.
v1.111216
	Enh.		encoder that uses enforces string constructs as kind string.
	Enh. 		JSON encoder/decoder.